<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMP N 1 MATESIH</string>
    <string name="perpus">Fasilitas yang ada di ruang Perpustakaan berupa Buku-buku, petugas, kursi, meja, ac dan fotocopy center</string>
    <string name="lab">Laboratorium memiliki fasilitas yang lengkap dan memenuhi standar, siswa dapat memanfaatkan fasilitas untuk melakukan penelitian</string>
    <string name="labkom">Lab Komputer berfungsi sebagai sarana siswa untuk mengembangkan bakatnya di bidang IT</string>
    <string name="masjid">SMPN 01 Matesih menunjang fasilitas masjid untuk melakukan kegiatan keagamaan</string>
    <string name="profil">SMP NEGERI 01 MATESIH</string>
    <string name="sejarah">SMP Negeri 1 Matesih atau dikenal dengan nama ESSAMA didirikan pada tanggal 1 Agustus 1962 oleh Menteri Pendidikan Dasar dan Kebudayaan dengan nomor : 1123 / B 3 / Kedj Tanggal 2 November 1962 atas usulan musyawarah desa matesih yang di kuatkan oleh kepala UPT Matesih tanggal 12 Juli 1962 No. A.213/11/2089 tentang usulan pembukaan sekolah menengah ekonomi tingkat pertama (SMEP) Negeri di Matesih. SMP Negeri 1 Matesih tepatnya beralamat di Jl. Matesih – Tawangmangu No.1 Kode Pos 57781 No. Telp 0271.662681</string>
    <string name="jarah">Kemudian Integrasi dari SMEP Negeri Matesih menjadi SMP Negeri Matesih dengan keputusan menteri P dan K. RI</string>
    <string name="no">No : 18306 / c /2 / 1979</string>
    <string name="nom">Tanggal : 20 Maret 1979, per 1 April 1979 sampai sekarang.</string>
    <string name="alamat">Alamat Sekolah :\nJalan Matesih-Tawangmangu No.1 Moyoretno Rt 02/07 Kel. Matesih, Kec. Matesih Kab. Karanganyar – Jawa Tengah</string>
    <string name="visi">Terwujudnya Peserta Didik Yang Unggul Dalam Prestasi Berlandaskan Iman Dan Takwa Serta Berwawasan Lingkungan.</string>
    <string name="misi">1. Meningkatkan prestasi akademik dan non akademik \n2. Menumbuhkan semangat keberhasilan dan gemar membaca \n3. Memfasilitasi kegiatan ekstrakurikuler dalam mengembangkan bakat siswa. \n4. Meningkatnya profesionalisme tenaga pendidik dan tenaga kependidikan \n5. Melaksanakan proses pembelajaran dan bimbingan konseling yang efektif, efisien dan menyenangkan \n6. Melaksanakan pengembangan sarana dan prasarana pendidikan yang mutakhir \n7. Meningkatkan Standar Kelulusan \n8. Menanamkan karakter religius melalui pembiasaan \n9. Mewujudkan manajemen sekolah yang tangguh \n10. Meningkatkan kualitas keimanan dan ketaqwaan warga sekolah \n11. Mengupayakan pembiasaan memelihara dan melestarikan lingkungan hidup. \n12. Mempertebal rasa kecintaan terhadap lingkungan kepada setiap warga sekolah. \n13. Membiasakan warga sekolah melaksanakan tindakan yang mengarah pada kelestarian fungsi lingkungan. \n14. Menanamkan sikap dan tindakan kepada warga sekolah untuk mencegah pencemaran lingkungan. \n15. Membentuk karakter warga sekolah agar sadar dan peduli terhadap upaya-upaya pencegahan kerusakan lingkungan \n16. Membudayakan kebersihan dan kenyamanan lingkungan. \n17. Membina hubungan baik dengan komite sekolah dan masyarakat sekitar.</string>
    <string name="kembang">Sebelumnya SMP Negeri Matesih mempunyai nama SMEP Matesih. SMEP Matesih berdiri atas prakarsa 9 desa sekecamatan matesih, yang dikuatkan oleh rapat Tri Tunggal Kecamatan Matesih pada tanggal 2 Agustus 1962.</string>
    <string name="perkembang">Kemudian disahkan oleh pemerintah menjadi SMEP Negeri Matesih dengan Nomor SK Pendirian :</string>
    <string name="perkembangan">No : 1123 / B 3 / Kep \nTanggal : 02 Agustus 1962</string>
    <string name="iden">NPSN : 20312110 \nStatus : Negeri \nBentuk Pendidikan : SMP \nStatus Kepemilikan : Pemerintah Daerah \nSK Pendirian Sekolah : 1123/B 3/Kedj \nTanggal SK Pendirian : 1962/08/01 \nSK Izin Operasional : - \nTanggal SK Izin Operasional : 1962/08/01</string>
    <string name="prasarana">1. Halaman Upacaran \n2. Ruang Agama Kristen \n3. Ruang BK \n4. Ruang Gudang \n5. Ruang Guru \n6. Ruang Karawitan \n7. Ruang Kesenian \n8. Ruang Kelas VIII, VII dan IX \n9. Ruang Koperasi \n10. Ruang KS \n11. Ruang Lab Bahasa \n12. Ruang Lab Bahasa Inggris \n13. Ruang Lab Biologi \n14. Ruang Lab Fisika \n15. Ruang Lab Komputer \n16. Ruang Lab Matematika \n17. Ruang Masjid \n18. Ruang Multimedia \n19. Ruang Olahraga \n20. Ruang Osis \n21. Ruang Penjaga \n22. Ruang Perpustakaan \n23. Ruang Pramuka \n24. Ruang TU \n25. Ruang UKS \n26. Ruang WKS \n27. WC Guru Laki-laki \n28. WC Guru Perempuan \n29. WC Siswa Laki-laki \n30. WC Siswa Perempuan \n31. Lapangan Serbaguna</string>
    <string name="arana">1. Meja Guru \n2. Kursi Guru \n3. Meja Siswa \n4. Kursi Siswa \n5. Papan Tulis \n6. Lemari \n7. Papan Panjang \n8. Tempat Sampah \n9. Tempat Cuci Tangan \n10. Jam Dinding \n11. Kotak Kontak \n12. Simbol Kenegaraan \n13. Kursi dan Meja Tamu \n14. Soket Listrik \n15. Instrumen Konseling \n16. Komputer \n17. Printer \n18. Proyektor \n19. Pengeras Suara \n20. Tempat Tidur UKS \n21. Meja UKS \n22. Kursi UKS \n23. Catatan Kesehatan Siswa \n24. Perlengkapan P3K \n25. Tandu \n26. Selimut \n27. Tensimeter \n29. Termometer Badan \n30. Timbangan Badan \n31. Pengukur Tinggi Badan \n32. Rak Buku Perpustakaan \n33. Rak Majalah \n34. Kloset Jongkok \n35. Tempat Air (BAK) \n36. Gayung \n37. Gantungan Pakaian \n38. Gayung (Small Bucket) \n39. Ruang KS \n40. Ruang WKS \n41. Ruang Guru \n42. Ruang Tata Usaha \n43. Ruang Koperasi \n44. Ruang Kesenian \n45. Ruang Agama Kristen \n46. Ruang Multimedia \n47. Ruang OSIS \n48. Peralatan Praktik Matematika \n49. Peralatan Lab Komputer \n50. Peralatan Praktik Fisika \n51. Peralatan Lab Bahasa Inggris</string>
    <string name="sarana">Sarana</string>
    <string name="pra">Prasarana</string>
    <string name="isiv">Visi</string>
    <string name="isim">Misi</string>
    <string name="sejarahsingkat">Sejarah Singkat</string>
    <string name="jarahpengembangan">Sejarah Pengembangan</string>
    <string name="idensekolah">Identitas Sekolah</string>
    <string name="utama">Dibuat oleh :</string>
    <string name="ut">RPL SMKN 02 Karanganyar</string>
    <string name="uta">Afriansyah Septyarno</string>
    <string name="program">1. Membentuk kepribadian warga sekolah yang mantap dalam menjalankan ajaran agamanya, berakhlaq mulia dan berbudi pekerti luhur. \n2. Meningkatkan kemampuan warga sekolah untuk berperilaku terpuji dan mengaplikasikan nilai-nilai karakter bangsa dalam kehidupan sehari-hari. \n3. Mengoptimalkan proses pembelajaran yang berkualitas dengan pendekatan CTL dan PAIKEM dan layanan Bimbingan dan Konseling agar Kompetensi Lulusan meningkat di setiap tahun. \n4. Mengembangkan kecerdasan di bidang akademik secara optimal sehingga terjadi peningkatan Ketercapaian Ketuntasan Minimal belajar dan peningkatan nilai rata-rata Ujian Nasipnal dari tahun ke tahun. \n5. Mengoptimalkan prestasi siswa dibidang non akademik. \n6. Meningkatkan ketertiban dan kedisiplinan warga sekolah. \n7. Meningkatkan kemampuan hidup sehat, nyaman, berbudaya dan berwawasan lingkungan. \n8. Mempersiapkan siswa untuk dapat melanjutkan ke jenjang pendidikan yang lebih tinggi. \n9. Meningkatkan pengamalan ajaran agama dalam kehidupan sehari-hari. \n10. Menumbuhkembangkan pendidikan karakter \n11. Melengkapi sarana dan prasarana sekolah sesuai dengan perkembangan IPTEK \n12. Menumbuhkan sikap sopan dan santun dalam perilaku dan bicara \n13. Meningkatkan budaya 9 K (Ketakwaan, keamanan, ketertiban, kebersihan, keindahan, kekeluargaan, kenyamanan, kerindangan dan keterbukaan). \n14. Mengembangkan pemberdayaan lingkungan hidup dengan cara Reuse (Guna ulang) Reduce (Mengurangi) dan Recycle (Mendaur ulang) \n15. Mengembangkan sekolah yang menjadi kepercayaan masyarakat. \n16. Mengembangkan sekolah menjadi sekolah adiwiyata. \n17. Mengembangkan sekolah menjadi sekolah efektif berpenampilan unggul.</string>
    <string name="layanan">Survei Kepuasan Masyarakat merupakan kegiatan pengukuran secara komprehensif tentang tingkat kepuasan masyarakat terhadap kualitas layanan yang diberikan oleh penyelenggara pelayanan publik dengan tujuan untuk mengetahui kelemahan atau kekurangan dari masing-masing unsur dalam penyelenggara pelayanan publik dan untuk mengetahui kinerja penyelenggara pelayanan yang telah dilaksanakan oleh unit pelayanan publik secara periodik.</string>
    <string name="survey">Silahkan masukan kritik dan atau saran anda, Tulisan anda adalah semangat kami dalam berkarya .Pastikan alamat email yang anda masukan benar, dimana akan kami jadikan alamat balasan terhadap kritik dan saran anda.</string>
    <string name="layan">Sebagaimana diamanatkan dalam Undang-Undang Nomor 25 Tahun 2009 tentang Pelayanan Publik, setiap penyelenggara pelayanan publik, baik yang memberikan pelayanan kepada masyarakat secara langsung maupun tidak langsung wajib menyusun, menetapkan, dan menerapkan standar pelayanan untuk setiap jenis pelayanan sebagai tolak ukur dalam penyelenggaraan pelayanan di lingkungan masing- masing.</string>
    <string name="puas">Survey kepuasan Masyarakat \nhttps://forms.gle/RCH6TaLd8KrMjRFN6</string>
    <string name="kritik">Kritik dan Saran (Suara Masyarakat) \nhttps://forms.gle/eR9MPGcoqimRfMNk8</string>
    <string name="web">Untuk dapat melihat informasi SMPN 1 Matesih bisa langsung Kunjungi web sekolah dibawah ini : \nhttps://www.smpn1matesih.sch.id/</string>
    <string name="nardi">Nardi, S.Pd, M.Pd</string>
    <string name="adhe">Adhe Suryani, S.Pd</string>
    <string name="agus">Agus Setiawan, S.Pd</string>
    <string name="ani">Dra. Ani Mulyati</string>
    <string name="anita">Anita Cipta Wardani, S.Pd</string>
    <string name="aris">Aris Suparsito, S.Pd, MP.d</string>
    <string name="dony">Dony Rochmad Kurniawan, S.Psi</string>
    <string name="giati">Giati, S.Pd</string>
    <string name="giyanto">Giyanto, S.Pd M.Pd</string>
    <string name="hariyadi">Hariyadi</string>
    <string name="hartanti">Hartanti, S.Pd</string>
    <string name="hepy_nur_ruhmaniah">Hepy Nur ruhmaniah</string>
    <string name="heri_susanto_s_kom">Heri Susanto, S.Kom</string>
    <string name="hufron_s_pd">Hufron, S.Pd</string>
    <string name="indari_pujihastuti">Indari Pujihastuti</string>
    <string name="jamaludin_s_pd">Jamaludin, S.Pd</string>
    <string name="jiman_s_pd">Jiman, S.Pd</string>
    <string name="joko_sugiyatno_s_pd">Joko Sugiyatno, S.Pd</string>
    <string name="kamadi_s_pd">Kamadi, S.Pd</string>
    <string name="kristi_adi_purwaningsih_s_ag">Kristi Adi Purwaningsih, S.Ag</string>
    <string name="larsa">Larsa</string>
    <string name="lely_nuriyastuti_s_pd_s_si">Lely Nuriyastuti, S.Pd, S.Si</string>
    <string name="lisdiyaning_prabanindri_s_pd">Lisdiyaning Prabanindri, S.Pd</string>
    <string name="narto_s_pd">Narto, S.Pd</string>
    <string name="natalia_lilik_permatasari_s_pd">Natalia Lilik Permatasari, S.Pd</string>
</resources>