<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/latarbelakang"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="Sejarah Singkat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/sejarah" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/jarah" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/no" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/nom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/latarbelakang"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="Sejarah Pengembangan" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/kembang" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/perkembang" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/perkembangan" />
    </LinearLayout>
</ScrollView>