<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/latarbelakang"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="@string/idensekolah" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/alamat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/iden" />
    </LinearLayout>
</ScrollView>