<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/latarbelakang">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:src="@drawable/perpus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/perpus"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/latarbelakang">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/laboratorium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/lab"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/latarbelakang">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:src="@drawable/labkom" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/labkom"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/latarbelakang">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:src="@drawable/masjid" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/masjid"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>